templates/istio/istio-frontendapp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontendapp
  labels:
    app: frontendapp
    service: frontendapp
  namespace: dev
spec:
  ports:
  - port: 5001
    name: http
  selector:
    app: frontendapp
---
