templates/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: traderapp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: traderapp
spec:
  hosts:
  - "*"
  gateways:
  - traderapp-gateway
  http:
  - match:
    - uri:
        prefix: /
#    - uri:
#        prefix: /hello
#    - uri:
#        prefix: /settings
    route:
    - destination:
        host: frontendapp
        #host: frontendapp.dev.svc
        port:
          number: 5001
