templates/istio/istio-subset.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontendapp
spec:
  hosts:
  - frontendapp
  http:
  - route:
    - destination:
        host: frontendapp
        subset: v1
      weight: 50
    - destination:
        host: frontendapp
        subset: v2
      weight: 50
